tools/tests/errors/surf_sw_04.experr
switch case value must be Integer, Float, String, Bool, or None
